--- a/style.css
+++ b/style.css
@@ -10,25 +10,24 @@ body{
 
 }
 .header{
-   display: block;
-   height:100%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(netflix.jpg);
+    display: block;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(Media/netflix.jpg);
     background-position: center;
     background-size: cover; 
    
  
 }
 nav{
+    margin: 0 18%;    
     height: 85px;
-display: flex;
-align-items: center;
-justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
                                         
 }
 .logo{
     width: 180px;
     padding-left: 5px;
-      cursor: pointer;
 }
 nav button{
     width: 75px;
@@ -44,22 +43,22 @@ nav button{
     margin-right: 25px;
 }
 .header-content{
-   display: flex;  
- text-align: center;
-justify-content: center;
- flex-direction: column;
- padding: 193px 0;
- margin: 0 10px;
+    display: flex;  
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 193px 0;
+    margin: 0 10px;
 }
 .header-content h1{
-font-size: 2.6rem;
-font-weight: 900;
+    font-size: 2.6rem;
+    font-weight: 900;
 
 }
 .header-content p{
-font-size: 1.5rem;
-font-weight: 400;
-margin: 16px 0px 0px;
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin: 16px 0px 0px;
 }
 .form{
     margin-top: 20px;
@@ -79,8 +78,8 @@ margin: 16px 0px 0px;
 .form h3{
     font-size: 1.25rem;
     font-weight: 400;
-   line-height: 1.5;
-   margin-bottom: 15px;
+    line-height: 1.5;
+    margin-bottom: 15px;
 
 }
 .form input{
@@ -89,7 +88,7 @@ margin: 16px 0px 0px;
     border: 1px solid rgb(123, 123, 123);
     outline: 0;
     border-radius: 4px;
-     background-color: transparent;
+    background-color: transparent;
     color: white;
     padding-left: 10px;
  
@@ -117,13 +116,13 @@ hr{
     opacity: 0.3;
 }
 .features{
-font-size: 24px;
-padding: 72px 0;
+    font-size: 24px;
+    padding: 72px 0;
 }
 .row{
-   display: flex;
-   align-items: center;
-   flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
     margin: 0 20%;
 }
 .col{
@@ -135,8 +134,8 @@ padding: 72px 0;
     padding: 50px 0;
 }
 .col h2{
-font-size: 3rem;
-font-weight: 900;
+    font-size: 3rem;
+    font-weight: 900;
 }
 .col p{
     margin-top: 1rem;
@@ -173,19 +172,19 @@ font-weight: 900;
     font-weight: 900;
 }
 .accordion{
-margin: 60px auto;
-width: 100%;
-max-width: 1172px;
+    margin: 30px auto 60px auto;
+    width: 100%;
+    max-width: 1172px;
 }
 .accordion li{
     list-style: none;
     width: 100%;
-    padding: 5px;
+    padding: 4px;
 }
 .accordion li label{
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding:25px 20px;
     font-size:25px;
     font-weight: 500;
     background-color: #303030;
